--- a/src/beer-fab.html
+++ b/src/beer-fab.html
@@ -5,9 +5,9 @@
 
 <dom-module id="beer-fab">
 
-  <template>
-
-    <style>
+  <template strip-whitespace>
+    
+    <style include="paper-material-styles">
 
       .fab{
         position: fixed;
