--- a/src/beer-favorite.html
+++ b/src/beer-favorite.html
@@ -20,16 +20,16 @@
 
 
       wrapper{
-         @apply(--layout-horizontal);
-         @apply(--layout-wrap);
+         @apply --layout-horizontal;
+         @apply --layout-wrap;
       }
 
         .item {
         margin: 20px;
         padding: 10px;
         height: 200px
-        @apply(--layout-horizontal);
-        @apply(--layout-center-justified);
+        @apply --layout-horizontal;
+        @apply --layout-center-justified;
       }
 
       .message {
