--- a/src/beer-menu-edit-price.html
+++ b/src/beer-menu-edit-price.html
@@ -14,15 +14,15 @@
 
 <dom-module id="beer-menu-edit-price">
 
-  <template>
-
-    <style>
+  <template strip-whitespace>
+    
+    <style include="paper-material-styles">
 
 
       .price-wrapper{
-         @apply(--layout-horizontal);
-         @apply(--layout-justified);
-         @apply(--layout-wrap);
+         @apply --layout-horizontal;
+         @apply --layout-justified;
+         @apply --layout-wrap;
       }
 
       .price{
