--- a/src/beer-pub-category.html
+++ b/src/beer-pub-category.html
@@ -8,9 +8,9 @@
 
 <dom-module id="beer-pub-category">
 
-  <template>
-
-    <style>
+  <template strip-whitespace>
+    
+    <style include="paper-material-styles">
 
       .name {
         font-size: 1.5em;
