--- a/src/beer-pub-edit.html
+++ b/src/beer-pub-edit.html
@@ -16,9 +16,9 @@
 
 <dom-module id="beer-pub-edit">
 
-  <template>
-
-    <style>
+  <template strip-whitespace>
+    
+    <style include="paper-material-styles">
       
 
       .item {
