--- a/src/beer-pub-favorite.html
+++ b/src/beer-pub-favorite.html
@@ -9,9 +9,9 @@
 
 <dom-module id="beer-pub-favorite">
 
-  <template>
-
-    <style>
+  <template strip-whitespace>
+    
+    <style include="paper-material-styles">
 
       .icon {
         font-size: 1.0em;
