--- a/src/beer-pub-rating.html
+++ b/src/beer-pub-rating.html
@@ -17,8 +17,6 @@
 <dom-module id="beer-pub-rating">
 <template strip-whitespace>
 
-
-
 <style is="custom-style">
 
 
@@ -33,14 +31,14 @@ paper-listbox {
 }*/
 
 .rating-wrapper{
-    @apply(--layout-horizontal);
-    @apply(--layout-start-justified);
+    @apply --layout-horizontal;
+    @apply --layout-start-justified;
 
 }
 
 .rating-stars{
-    @apply(--layout-horizontal);
-    @apply(--layout-start-justified);
+    @apply --layout-horizontal;
+    @apply --layout-start-justified;
 }
 
 .rating-number{
