--- a/src/beer-style-select.html
+++ b/src/beer-style-select.html
@@ -10,9 +10,9 @@
 <dom-module id="beer-style-select">
 
 
-  <template>
-
-    <style>
+  <template strip-whitespace>
+    
+    <style include="paper-material-styles">
 
       .style {
          max-width: 500px;
