--- a/src/beer-tab.html
+++ b/src/beer-tab.html
@@ -24,7 +24,7 @@
         right: 0;
         bottom: 0;
         left: 0;
-        @apply(--beer-tab-overlay);
+        @apply --beer-tab-overlay;
       }
 
       :host(.beer-tabs-overlay-static-above) #overlay {
