--- a/src/beer-tabs.html
+++ b/src/beer-tabs.html
@@ -9,8 +9,8 @@
   <template strip-whitespace>
     <style>
       :host {
-        @apply(--layout);
-        @apply(--layout-center-center);
+        @apply --layout;
+        @apply --layout-center-center;
       }
 
       #container {
@@ -18,7 +18,7 @@
       }
 
       beer-tabs-overlay {
-        @apply(--beer-tab-overlay);
+        @apply --beer-tab-overlay;
       }
     </style>
     <div id="container">
