--- a/my_components/data/upload-image.html
+++ b/my_components/data/upload-image.html
@@ -7,11 +7,8 @@
 <link rel="import" href="../../bower_components/polymerfire/firebase-auth.html">
 
 <link rel="import" href="../../bower_components/iron-icon/iron-icon.html">
-
-<!--<link rel="import" href="../../bower_components/iron-icons/iron-icons.html">-->
 <link rel="import" href="../../bower_components/iron-label/iron-label.html">
 <link rel="import" href="../../bower_components/paper-progress/paper-progress.html">
-<link rel="import" href="../../bower_components/paper-material/paper-material.html">
 <link rel="import" href="../../bower_components/paper-button/paper-button.html">
 
 <link rel="import" href="../../src/beer-button.html">
@@ -37,7 +34,7 @@
     }
     .message-box{
       margin: 0 10px 10px 10px ;
-       @apply(--layout-horizontal);
+       @apply --layout-horizontal;
     }
     .message-icon{
       margin: 0 5px 0 5px;
@@ -81,7 +78,7 @@
   
   
   <div>
-  <paper-material elevation="0" animated-shadow="false">
+  <div animated-shadow="false">
 
      <paper-progress 
           class="uploader-progress"
@@ -117,7 +114,7 @@
  
      
 
-  </paper-material>
+  </div>
   </div>
   
 </template>
