--- a/src/beer-contact.html
+++ b/src/beer-contact.html
@@ -19,9 +19,9 @@
 
 <dom-module id="beer-contact">
 
-  <template>
-
-    <style>
+  <template strip-whitespace>
+    
+    <style include="paper-material-styles">
 
       :host {
         display: block;
@@ -30,13 +30,13 @@
       }
       
       .wrapper{
-        @apply(--layout-vertical);
-        @apply(--layout-center-justified);
+        @apply --layout-vertical;
+        @apply --layout-center-justified;
       }
 
       .item{
-        @apply(--layout-horizontal);
-        @apply(--layout-center-justified);
+        @apply --layout-horizontal;
+        @apply --layout-center-justified;
         margin: 10px;
       }
 
