--- a/src/beer-favorite-brewery.html
+++ b/src/beer-favorite-brewery.html
@@ -10,9 +10,9 @@
 <dom-module id="beer-favorite-brewery">
   
 
-  <template>
-
-    <style>
+  <template strip-whitespace>
+    
+    <style include="paper-material-styles">
 
       :host {
         display: block;
