--- a/src/beer-rating-card.html
+++ b/src/beer-rating-card.html
@@ -1,5 +1,5 @@
 <link rel="import" href="../bower_components/polymer/polymer.html">
-<link rel="import" href="../bower_components/paper-material/paper-material.html">
+<link rel="import" href="../bower_components/paper-styles/element-styles/paper-material-styles.html">
 <link rel="import" href="../bower_components/iron-flex-layout/iron-flex-layout.html">
 <link rel="import" href="../bower_components/iron-icon/iron-icon.html">
 
@@ -9,53 +9,16 @@
 <dom-module id="beer-rating-card">
   
 
-  <template>
+ <template strip-whitespace>
+    
+    <style include="paper-material-styles">
 
-    <style>
-
-      /*.card{
-        width: 100%;
-        margin: 0 0 20px 0;
-      }
-
-       .menu{
-         @apply(--layout-vertical);         
-      }*/
 
       .rating-wrapper{
-        @apply(--layout-horizontal);
-        @apply(--layout-start-justified);
+        @apply --layout-horizontal;
+        @apply --layout-start-justified;
       }
 
-/*
-      .menu-items {
-         @apply(--layout-vertical);
-         margin: 0 0 0 20px;
-         min-width: 400px;
-      }
-
-      .menu-item {
-        @apply(--layout-horizontal);
-        @apply(--layout-start-justified);
-      }
-
-      .category-title{
-        font-size: 1.5em;
-        font-weight: 200;
-        min-width: 400px;
-        color: var(--app-accent-color);
-        @apply(--layout-horizontal);
-        @apply(--layout-end-justified);
-        @apply(--layout-center);
-      }*/
-
-
-
-      /*.rating-address{
-        color: var(--app-primary-color);
-        font-size: 1em;
-        font-weight: 400;
-      }*/
 
       .rating-number{
         font-size: 1.2em;
@@ -67,6 +30,7 @@
 
       .rating{
         margin: 10px
+        
       }
 
       .rating-icon{
@@ -88,7 +52,7 @@
 
     </style>
 
-    <paper-material class="rating" elevation="0" animated-shadow="false">
+    <div class="rating" animated-shadow="false">
         <div class="rating-wrapper">
           <template is="dom-repeat" items="[[_positiveStars(rating)]]" as="rating">
               <iron-icon class="rating-icon" icon="beer-icons:star"></iron-icon>
@@ -104,7 +68,7 @@
 
           <div hidden$="[[!rating]]" class="rating-number">[[rating]]</div>
         <div>
-    </paper-material>
+    </div>
   </template>
 
 
