--- a/src/beer-review.html
+++ b/src/beer-review.html
@@ -12,9 +12,9 @@
 
 
 <dom-module id="beer-review">
-  <template>
-
-    <style>
+  <template strip-whitespace>
+    
+    <style include="paper-material-styles">
 
       :host {
         display: block;
