--- a/src/beer-tv-dialog.html
+++ b/src/beer-tv-dialog.html
@@ -8,8 +8,9 @@
 
 
 <dom-module id="beer-tv-dialog">
-  <template>
-    <style>
+  <template strip-whitespace>
+    
+    <style include="paper-material-styles">>
       :host {
           width: 100vw; 
           height: 100vh;
@@ -32,8 +33,8 @@
         z-index: 100;
         -webkit-transform: translateZ(0);
 
-       @apply(--layout-horizontal);
-       @apply(--layout-center-justified);
+       @apply --layout-horizontal;
+       @apply --layout-center-justified;
      }
 
      .logo>div{
