--- a/src/beer-foodtruck-calendar.html
+++ b/src/beer-foodtruck-calendar.html
@@ -11,7 +11,6 @@
 <link rel="import" href="../bower_components/paper-input/paper-input.html">
 <link rel="import" href="../bower_components/paper-styles/element-styles/paper-material-styles.html">
 <link rel="import" href="../bower_components/polymerfire/firebase-auth.html">
-<link rel="import" href="../bower_components/toggle-icon/toggle-icon.html">
 
 <link rel="import" href="beer-foodtruck-calendar-input.html">
 
@@ -66,6 +65,11 @@
         font-weight: 400;
       }
 
+      .flip{
+        -webkit-transform: scale(1, -1);
+        transform: scale(1, -1);
+      }
+
 
     </style>
 
@@ -92,13 +96,8 @@
             </template>
 
            <iron-label class="add">
-              <toggle-icon
-                    animation="flip-vertical" 
-                    icon="beer-icons:expand-more"
-                    checked="{{toggle}}"
-                    noink>
-              </toggle-icon>
-            <span class="day add">[[selectedDayLabel]]</span>
+              <paper-icon-button class$="[[toggleClass]]" icon="beer-icons:expand-more" on-tap="_toggle"></paper-icon-button>
+              <span class="day add">[[selectedDayLabel]]</span>
            </iron-label>
           
           <div>
@@ -217,6 +216,10 @@
        toggle:{
          type: Boolean
        },
+
+       toggleClass:{
+          type: String
+        },
 
        truckId:{
          type:String
@@ -470,6 +473,15 @@
 
       _close: function (){
         this.toggle = false;
+      },
+
+       _toggle: function (){
+        this.toggle = !this.toggle
+        if(this.toggle){
+          this.toggleClass = 'flip'
+        }else{
+          this.toggleClass = '';
+        }
       },
 
       _sortDay: function(a,b){
