--- a/src/beer-location.html
+++ b/src/beer-location.html
@@ -6,13 +6,15 @@
 <link rel="import" href="../bower_components/iron-icon/iron-icon.html">
 <link rel="import" href="../bower_components/iron-label/iron-label.html">
 <link rel="import" href="../bower_components/paper-button/paper-button.html">
+<link rel="import" href="../bower_components/paper-button/paper-button.html">
+<link rel="import" href="../bower_components/paper-icon-button/paper-icon-button.html">
+
 <link rel="import" href="../bower_components/paper-input/paper-input.html">
 <link rel="import" href="../bower_components/paper-styles/element-styles/paper-material-styles.html">
 <link rel="import" href="../bower_components/paper-listbox/paper-listbox.html">
 <link rel="import" href="../bower_components/paper-item/paper-item.html">
 <link rel="import" href="../bower_components/paper-spinner/paper-spinner-lite.html">
-<link rel="import" href="../bower_components/google-apis/google-maps-api.html">-->
-<link rel="import" href="../bower_components/toggle-icon/toggle-icon.html">
+<link rel="import" href="../bower_components/google-apis/google-maps-api.html">
 
 <link rel="import" href="beer-icons.html">
 
@@ -41,6 +43,12 @@
     paper-material > div{
         margin: 10px
       }
+
+
+    .flip{
+      -webkit-transform: scale(1, -1);
+      transform: scale(1, -1);
+    }
 
     .title-wrapper{
        @apply --layout-horizontal;
@@ -120,7 +128,7 @@
         <div hidden$="[[!geoError]]">
           <div class="geo-error">Location not available from this device.</div>
         </div>
-        <div class="">
+        <div>
         <iron-label class="wrapper">
               <paper-icon-button icon="beer-icons:[[gpsIcon]]" on-tap="_resetToLocal"></paper-icon-button>
               <span class="title">Near my location<span>
@@ -128,12 +136,10 @@
 
 
         <iron-label class="wrapper">
-            <toggle-icon
-                  animation="flip-vertical" 
-                  icon="beer-icons:expand-more"
-                  checked="{{toggle}}"
-                  noink>
-            </toggle-icon>
+
+            
+            <paper-icon-button class$="[[toggleClass]]" icon="beer-icons:expand-more" noink on-tap="_toggle"></paper-icon-button>
+            
             <span class="location-label">Change location</span>
           </iron-label>
         </div>
@@ -217,6 +223,10 @@
           value: false
         },
 
+        toggleClass:{
+          type: String
+        }
+
       },
 
 
@@ -294,6 +304,15 @@
             return false
           }
         };
+      },
+
+      _toggle: function (){
+        this.toggle = !this.toggle
+        if(this.toggle){
+          this.toggleClass = 'flip'
+        }else{
+          this.toggleClass = '';
+        }
       },
 
 
