--- a/src/beer-tap-card.html
+++ b/src/beer-tap-card.html
@@ -3,10 +3,9 @@
 <link rel="import" href="../bower_components/iron-label/iron-label.html">
 <link rel="import" href="../bower_components/iron-collapse/iron-collapse.html">
 
-<link rel="import" href="../bower_components/toggle-icon/toggle-icon.html">
 <link rel="import" href="../bower_components/iron-icons/iron-icons.html">
 <link rel="import" href="../bower_components/paper-listbox/paper-listbox.html">
-
+<link rel="import" href="../bower_components/paper-item/paper-item.html">
 <link rel="import" href="../bower_components/paper-styles/element-styles/paper-material-styles.html">
 <link rel="import" href="../bower_components/paper-icon-button/paper-icon-button.html">
 <link rel="import" href="../bower_components/paper-toggle-button/paper-toggle-button.html">
@@ -166,11 +165,9 @@
         <div>
           <div id="tapStatusMesage" >
           <iron-label class="tap-status-wrapper">
-            <toggle-icon
-                  icon="beer-icons:[[icon]]"
-                  checked="{{toggle}}"
-                  noink>
-            </toggle-icon>
+
+           <paper-icon-button icon="beer-icons:[[icon]]" noink on-tap="_toggle"></paper-icon-button>
+
             <div class="tap-status-shown">[[tapStatus]]</div>
            </iron-label>
           </div>
@@ -336,6 +333,10 @@
       },
       close: function (){
         this.toggle = false;
+      },
+
+      _toggle: function (){
+        this.toggle = !this.toggle;
       },
 
       _hideChoice: function (tap, choice){
