--- a/test/beer-home.html
+++ b/test/beer-home.html
@@ -1,13 +1,5 @@
 <!doctype html>
-<!--
-@license
-Copyright (c) 2016 The Polymer Project Authors. All rights reserved.
-This code may only be used under the BSD style license found at http://polymer.github.io/LICENSE.txt
-The complete set of authors may be found at http://polymer.github.io/AUTHORS.txt
-The complete set of contributors may be found at http://polymer.github.io/CONTRIBUTORS.txt
-Code distributed by Google as part of the polymer project is also
-subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
--->
+
 
 <html>
 <head>
@@ -18,19 +10,19 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <script src="../bower_components/web-component-tester/browser.js"></script>
 
   <!-- Import the element to test -->
-  <link rel="import" href="../src/shop-home.html">
+  <link rel="import" href="../src/beer-home.html">
 
 </head>
 <body>
 
   <test-fixture id="basic">
     <template>
-       <shop-home></shop-home>
+       <beer-home></beer-home>
     </template>
   </test-fixture>
 
   <script>
-    suite('shop-home tests', function() {
+    suite('beer-home tests', function() {
       var home;
 
       setup(function() {
@@ -40,9 +32,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       test('Item lengths should be equalled', function(done) {
         // Test categories property
         home.categories = [
-          {name: 'furniture', title: 'Furniture'},
-          {name: 'food', title: 'Food'},
-          {name: 'fashion', title: 'Fashion'}
+          {name: 'beer', title: 'Our Beers'},
+          {name: 'tap', title: 'On Tap'},
+          {name: 'menu', title: 'Menu'},
+          {name: 'food-truck', title: 'Food Trucks'}
         ];
 
         // Data bindings will stamp out new DOM asynchronously
