changed background icon

--- a/src/beer-pub-rating.html
+++ b/src/beer-pub-rating.html
@@ -82,7 +82,7 @@
     <div class="background-rating">
      
       <template is="dom-repeat" items="{{limitItems}}" strip-whitespace>
-        <iron-icon icon="beer-icons:star"></iron-icon>
+        <iron-icon icon="beer-icons:star-border"></iron-icon>
       </template>
     </div>
 
