--- a/src/beer-foodtruck-calendar.html
+++ b/src/beer-foodtruck-calendar.html
@@ -457,7 +457,12 @@
           
           if(hour === 0){     
             hour = 12;
-            amPm = "AM"
+            amPm = "AM";
+
+          }else if (hour === 12) {
+            hour = 12;
+            amPm = "PM";
+          
           }else if(hour > 12){
             hour = hour-12;
             amPm = 'PM';
