add truck scheduling function

--- a/src/beer-foodtruck-schedule.html
+++ b/src/beer-foodtruck-schedule.html
@@ -162,6 +162,7 @@
                       truckObjAdd.close = period.CLOSE;
                       truckObjAdd.name = truck.name;
                       truckObjAdd.id = key[i]
+                      // truckObjAdd.timestamp = Date.now();
                       obj[period.day].trucks.push(truckObjAdd)
                     }
                     
