--- a/src/beer-foodtruck-calendar.html
+++ b/src/beer-foodtruck-calendar.html
@@ -371,6 +371,7 @@
 
           period.OPEN = openTime;
           period.CLOSE = closeTime;
+          period.timestamp = Date.now();
 
         // console.log(this.selectedDay.key, period)
         
