--- a/src/beer-pub.html
+++ b/src/beer-pub.html
@@ -302,7 +302,9 @@
           <h3>[[organization.name]]</h3>
       </div>
       <paper-dialog-scrollable>
-        <beer-pub-edit org-id="[[orgId]]" owner="[[owner]]">
+        <beer-pub-edit 
+          org-id="[[orgId]]" 
+          owner="[[owner]]">
         </beer-pub-edit>
       </paper-dialog-scrollable>
     
