add food truck scheduling

--- a/src/beer-pub-card.html
+++ b/src/beer-pub-card.html
@@ -104,13 +104,13 @@
             <div id="sponsor" hidden$="[[sponsorHide]]">Sponsoring Organization</div>
         </div>
             <div class="rating">
-              <beer-pub-rating 
+              <!--<beer-pub-rating 
                   place-id="[[placeId]]"
                   google-rating="[[googleRating]]"
                   login="{{login}}"
                   address="[[address]]"
                   name="[[name]]">
-              </beer-pub-rating>
+              </beer-pub-rating>-->
             </div>
            
            
