--- a/src/beer-pub-rating.html
+++ b/src/beer-pub-rating.html
@@ -202,7 +202,7 @@
     },
 
       _hasUserRating: function (userRating) {
-        console.log('userRating', userRating)
+        console.log('userRating', this.placeId)
         if(typeof userRating === 'number'){
             this.value = userRating;
             this.ratingStyle = 'user-rating'
