--- a/src/beer-app.html
+++ b/src/beer-app.html
@@ -460,6 +460,8 @@
           <beer-list name="list" route="[[subroute]]" offline="[[offline]]" place="[[place]]"  owner="[[owner]]"></beer-list>
           <beer-search name="search" location="{{location}}" idle="{{idle}}" search-string="{{searchString}}" sorted-location-history="[[sortedLocationHistory]]" geo-error="[[geoError]]"></beer-search>
           <beer-beer-info name="beer-info" login="{{login}}" location="[[location]]" beer-id="[[beerId]]"></beer-beer-info>
+          <beer-schedule name="schedule" category=[[organization.category.SCHEDULE]] organization="[[organization]]" place="[[place]]" name-url="[[nameUrl]]" org-id="[[orgId]]" online="[[online]]" owner="[[owner]]"></beer-schedule>
+          <beer-schedule-edit name="schedule-edit" location-id="[[locationId]]" location="{{location}}" organization="[[organization]]" org-id="[[orgId]]" name-url="[[nameUrl]]" idle="{{idle}}" search-string="{{searchString}}" sorted-location-history="[[sortedLocationHistory]]" geo-error="[[geoError]]"></beer-schedule-edit>
 
           <beer-home name="home" location="{{location}}" idle="{{idle}}" search-string="{{searchString}}" sorted-location-history="[[sortedLocationHistory]]" all-object="[[allObject]]" all-array="[[allArray]]"></beer-home>
           <beer-favorite name="favorite"></beer-favorite>
@@ -607,6 +609,11 @@
 
         locationHistory:{
           type: Array
+        },
+
+        locationId:{
+          type: String,
+          computed: '_computeLocationId(queryParams)',
         },
         
 
@@ -944,6 +951,11 @@
                page = 'contact';
              }else if(subRoute==='review'){
                page = 'review';
+            }else if(subRoute==='schedule'){
+              page = 'schedule';
+            }else if(subRoute==='schedule-edit'){
+              page = 'schedule-edit';
+              returnPage='schedule';
             }else if(subRoute==='tv'){
               page = 'tv';
               returnPage='tap';
@@ -1179,6 +1191,15 @@
         if (queryParams) {
           if (queryParams.truckId) {
             return queryParams.truckId
+          }
+        }
+        return null;
+      },
+
+      _computeLocationId: function (queryParams) {
+        if (queryParams) {
+          if (queryParams.locationId) {
+            return queryParams.locationId
           }
         }
         return null;
