--- a/src/beer-menu-card-mini.html
+++ b/src/beer-menu-card-mini.html
@@ -2,6 +2,8 @@
 <link rel="import" href="../bower_components/paper-styles/element-styles/paper-material-styles.html">
 <link rel="import" href="../bower_components/iron-flex-layout/iron-flex-layout.html">
 <link rel="import" href="../bower_components/paper-icon-button/paper-icon-button.html">
+<link rel="import" href="../bower_components/iron-icon/iron-icon.html">
+
 
 
 <dom-module id="beer-menu-card-mini">
@@ -65,7 +67,6 @@
         font-size: 2em;
         font-weight: 500;
         color: var(--app-accent-color);
-       
       }
 
 
